--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
 <body>
 
+  <div style="position:fixed;top:0;left:0;background:red;color:white;z-index:9999;">VERSION 2</div>
+
+
 <div id="login" class="centered">
   <h2>KPS Guard Access</h2>
   <input id="passcode" type="password" placeholder="Enter passcode">
