--- a/index.html
+++ b/index.html
@@ -84,7 +84,21 @@
       border-radius:12px;
       width:90%;
       max-width:400px;
+      display:flex;
+      flex-direction:column;
     }
+
+    #scannerPopup {
+      position:fixed;
+      inset:0;
+      background:rgba(0,0,0,0.85);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      flex-direction:column;
+      z-index:1000;
+    }
+    #scannerPopup button { margin-top:15px; }
   </style>
 </head>
 
@@ -121,8 +135,7 @@
   </div>
 </div>
 
-<div id="scanner" class="hidden"></div>
-
+<!-- Manual Entry Popup -->
 <div id="manualPopup" class="popup hidden">
   <div class="popup-inner">
     <h3>Manual Entry</h3>
@@ -134,6 +147,7 @@
   </div>
 </div>
 
+<!-- Confirm Sign Out Popup -->
 <div id="confirmPopup" class="popup hidden">
   <div class="popup-inner">
     <h3>Sign this person out?</h3>
@@ -142,18 +156,25 @@
   </div>
 </div>
 
+<!-- QR Scanner Popup -->
+<div id="scannerPopup" class="hidden">
+  <div id="scanner" style="width:300px;height:300px;"></div>
+  <button class="gray" onclick="closeScanner()">Cancel Scan</button>
+</div>
+
 <script>
-const PASS = "test";  // changed to test
+const PASS = "test";  
 let site = "";
 let signOutTarget = null;
+let qrScanner = null;
 
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby52PhybpixBnv3wjCCjG1wuWr9E_ziMdYQs9zeSRuzoMp9J5LrFdi9IRWcEoGLYm3Z/exec";
 
+// --- Login ---
 function login() {
   const passInput = document.getElementById("passInput");
   const loginScreen = document.getElementById("loginScreen");
   const sites = document.getElementById("sites");
-
   if (passInput.value === PASS) {
     loginScreen.classList.add("hidden");
     sites.classList.remove("hidden");
@@ -162,6 +183,7 @@ function login() {
   }
 }
 
+// --- Site Selection ---
 function selectSite(s) {
   site = s;
   document.getElementById("sites").classList.add("hidden");
@@ -170,66 +192,85 @@ function selectSite(s) {
   loadOnSite();
 }
 
+// --- Tabs ---
 function showTab(t) {
-  document.getElementById("scanTab").classList.toggle("hidden", t !== "scan");
-  document.getElementById("onSiteTab").classList.toggle("hidden", t !== "onSite");
+  document.getElementById("scanTab").classList.toggle("hidden", t!=="scan");
+  document.getElementById("onSiteTab").classList.toggle("hidden", t!=="onSite");
+  if(t==="onSite") loadOnSite();
 }
 
-function startScan() {
-  const scanner = document.getElementById("scanner");
-  scanner.classList.remove("hidden");
-  const qr = new Html5Qrcode("scanner");
-  qr.start({ facingMode:"environment" }, {}, txt => {
-    qr.stop();
-    scanner.classList.add("hidden");
-    handleCheckIn(txt,"");
-  });
-}
-
-function openManual() {
+// --- Manual Entry ---
+function openManual(){
   document.getElementById("manualTime").value = new Date().toLocaleString();
   document.getElementById("manualPopup").classList.remove("hidden");
 }
-
 function closeManual(){ document.getElementById("manualPopup").classList.add("hidden"); }
-
 function submitManual(){
-  handleCheckIn(document.getElementById("manualName").value,
-                document.getElementById("manualTruck").value,
-                document.getElementById("manualTime").value);
+  handleCheckIn(
+    document.getElementById("manualName").value,
+    document.getElementById("manualTruck").value,
+    document.getElementById("manualTime").value
+  );
   closeManual();
 }
 
-function handleCheckIn(name, truck, time = new Date().toLocaleString()) {
-  fetch(SCRIPT_URL + `?site=${encodeURIComponent(site)}&action=in&name=${encodeURIComponent(name)}&truck=${encodeURIComponent(truck)}&time=${encodeURIComponent(time)}`)
-    .then(loadOnSite);
+// --- Check-in / Sign-out API ---
+function handleCheckIn(name, truck, time = new Date().toISOString()) {
+  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=checkin&name=${encodeURIComponent(name)}&truck=${encodeURIComponent(truck)}&time=${encodeURIComponent(time)}`)
+    .then(()=>{ loadOnSite(); alert("Check-in recorded!"); });
 }
 
-function loadOnSite() {
-  fetch(SCRIPT_URL + `?site=${encodeURIComponent(site)}&action=list`)
+function askSignOut(p){
+  signOutTarget = p; 
+  document.getElementById("confirmPopup").classList.remove("hidden");
+}
+function closeConfirm(){ document.getElementById("confirmPopup").classList.add("hidden"); }
+function confirmSignOut(){
+  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=signout&id=${encodeURIComponent(signOutTarget.id)}`)
+    .then(()=>{ closeConfirm(); loadOnSite(); alert("Signed out!"); });
+}
+
+// --- On Site List ---
+function loadOnSite(){
+  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=onsite`)
     .then(r=>r.json())
-    .then(d => { window.onSite = d; renderOnSite(); });
+    .then(d=>{ window.onSite=d; renderOnSite(); });
 }
 
-function renderOnSite() {
+function renderOnSite(){
   const q = document.getElementById("search").value.toLowerCase();
-  const onSiteList = document.getElementById("onSiteList");
-  onSiteList.innerHTML = "";
-  (window.onSite||[]).filter(x => (x.name+x.truck).toLowerCase().includes(q)).forEach(p => {
-    const d = document.createElement("div");
-    d.className = "card";
-    d.innerHTML = `<b>${p.name}</b><br>${p.truck}<br><button class="red">Sign Out</button>`;
-    d.querySelector("button").onclick = ()=>askSignOut(p);
-    onSiteList.appendChild(d);
+  const list = document.getElementById("onSiteList");
+  list.innerHTML = "";
+  (window.onSite||[]).filter(p => (p.name+p.truck).toLowerCase().includes(q)).forEach(p=>{
+    const card = document.createElement("div");
+    card.className = "card";
+    card.innerHTML = `<b>${p.name}</b><br>${p.truck}<br><button class="red">Sign Out</button>`;
+    card.querySelector("button").onclick = ()=>askSignOut(p);
+    list.appendChild(card);
   });
 }
 
-function askSignOut(p){ signOutTarget = p; document.getElementById("confirmPopup").classList.remove("hidden"); }
-function closeConfirm(){ document.getElementById("confirmPopup").classList.add("hidden"); }
+// --- QR Scanner ---
+function startScan(){
+  const popup = document.getElementById("scannerPopup");
+  const scannerDiv = document.getElementById("scanner");
+  popup.classList.remove("hidden");
+  qrScanner = new Html5Qrcode("scanner");
+  qrScanner.start(
+    { facingMode:"environment" },
+    { fps:10, qrbox:250 },
+    text=>{
+      qrScanner.stop();
+      popup.classList.add("hidden");
+      const [name, truck] = text.split("|");
+      handleCheckIn(name||"", truck||"");
+    }
+  );
+}
 
-function confirmSignOut(){
-  fetch(SCRIPT_URL + `?site=${encodeURIComponent(site)}&action=out&id=${encodeURIComponent(signOutTarget.id)}`)
-    .then(()=>{ closeConfirm(); loadOnSite(); });
+function closeScanner(){
+  if(qrScanner) qrScanner.stop();
+  document.getElementById("scannerPopup").classList.add("hidden");
 }
 </script>
 
