--- a/index.html
+++ b/index.html
@@ -88,17 +88,27 @@
       flex-direction:column;
     }
 
+    /* Scanner popup */
     #scannerPopup {
       position:fixed;
       inset:0;
       background:rgba(0,0,0,0.85);
       display:flex;
-      align-items:center;
+      align-items:flex-start;
       justify-content:center;
       flex-direction:column;
       z-index:1000;
+      padding-top:50px;
     }
-    #scannerPopup button { margin-top:15px; }
+    #scannerPopup #scanner {
+      width:300px;
+      height:300px;
+      align-self:center;
+    }
+    #scannerPopup button { 
+      margin-top:15px; 
+      align-self:center;
+    }
   </style>
 </head>
 
@@ -158,7 +168,7 @@
 
 <!-- QR Scanner Popup -->
 <div id="scannerPopup" class="hidden">
-  <div id="scanner" style="width:300px;height:300px;"></div>
+  <div id="scanner"></div>
   <button class="gray" onclick="closeScanner()">Cancel Scan</button>
 </div>
 
@@ -216,7 +226,7 @@ function submitManual(){
 
 // --- Check-in / Sign-out API ---
 function handleCheckIn(name, truck, time = new Date().toISOString()) {
-  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=checkin&name=${encodeURIComponent(name)}&truck=${encodeURIComponent(truck)}&time=${encodeURIComponent(time)}`)
+  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=in&name=${encodeURIComponent(name)}&truck=${encodeURIComponent(truck)}&time=${encodeURIComponent(time)}`)
     .then(()=>{ loadOnSite(); alert("Check-in recorded!"); });
 }
 
@@ -226,13 +236,13 @@ function askSignOut(p){
 }
 function closeConfirm(){ document.getElementById("confirmPopup").classList.add("hidden"); }
 function confirmSignOut(){
-  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=signout&id=${encodeURIComponent(signOutTarget.id)}`)
+  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=out&id=${encodeURIComponent(signOutTarget.id)}`)
     .then(()=>{ closeConfirm(); loadOnSite(); alert("Signed out!"); });
 }
 
 // --- On Site List ---
 function loadOnSite(){
-  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=onsite`)
+  fetch(`${SCRIPT_URL}?site=${encodeURIComponent(site)}&action=list`)
     .then(r=>r.json())
     .then(d=>{ window.onSite=d; renderOnSite(); });
 }
